<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="hello">Hello World, Date!</string>
    <string name="app_name">成交量统计应用系统</string>
    <string name="strInputAccHint">输入帐号</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="login">登 录</string>
    <string name="register">注册</string>
    <string name="cancle">取消</string>
    <string name="account_empty">用户名为空，请重新输入！</string>
    <string name="pwd_empty">密码为空，请重新输入！</string>
    <string name="register_fail">注册用户失败，请重新尝试！</string>
    <string name="register_sucess">注册成功！</string>
    <string name="login_sucess">登陆成功！</string>
    <string name="login_fail">登陆失败！请输入正确的用户名与密码！</string>
    <string name="name_already_exist">用户名：<xliff:g id="id1" example="tom">%1$s</xliff:g>已存在，请重新输入！</string>
    <string name="user_login_sucess">用户：<xliff:g id="id2" example="tom">%1$s</xliff:g>登录，欢迎光临！</string>
    <string name="yyblistprompt">请选择营业部</string>
    <string name="registerreturn">返回</string>
    <string name="strInputHintAcc">请输入账号（５位工号）</string>
    <string name="strInputHintName">姓名</string>
    <string name="strInputHintTel">电话</string>
    <string name="strInputHintMail">邮箱　@swhysc.com</string>
    <string name="yybselectHint">请选择营业部</string>

</resources>