<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_bg_hdpi"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/yybselect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/yyb"
        android:prompt="@string/yybselectHint" />

    <EditText
        android:id="@+id/register_edit_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/qq_edit_login"
        android:hint="@string/strInputHintAcc"
        android:inputType="number"
        android:saveEnabled="true" />

    <EditText
        android:id="@+id/login_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/qq_edit_login"
        android:hint="@string/strInputHintName"
        android:inputType="text"
        android:saveEnabled="true" />

    <EditText
        android:id="@+id/login_edit_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/qq_edit_login"
        android:hint="@string/strInputHintTel"
        android:inputType="phone"
        android:saveEnabled="true" />

    <EditText
        android:id="@+id/login_edit_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/qq_edit_login"
        android:hint="@string/strInputHintMail"
        android:inputType="textEmailAddress"
        android:saveEnabled="true" />

    <Button
        android:id="@+id/register_btn_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.0px"
        android:layout_marginLeft="5.0dip"
        android:layout_marginRight="5.0dip"
        android:layout_marginTop="5.0dip"
        android:text="@string/register" />

    <Button
        android:id="@+id/register_btn_return"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.0px"
        android:layout_marginLeft="5.0dip"
        android:layout_marginRight="5.0dip"
        android:layout_marginTop="5.0dip"
        android:text="@string/registerreturn" />

</LinearLayout>